--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,9 @@ dependencies:
   # Local Database
   sqflite: ^2.3.0
   path: ^1.8.3
+  
+  # HTTP for API calls
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
