--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   
   # Firebase Firestore for database
   cloud_firestore: ^5.5.0
+  firebase_auth: ^5.3.1
   
   # Date formatting
   intl: ^0.19.0
@@ -60,6 +61,8 @@ dependencies:
   
   # HTTP for API calls
   http: ^1.1.0
+  pdf: ^3.11.3
+  printing: ^5.14.2
 
 dev_dependencies:
   flutter_test:
